5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1723_2508.log
== TEST (2019-05-10 22:22:15) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2*t)*(3*t)*(4*t)
			t = t + 1
		else:
			pi = pi - 4/(2*t)*(3*t)*(4*t)
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:22:17) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2*t)*(3*t)*(4*t)
			t = t + 1
		else:
			pi = pi - 4/(2*t)*(3*t)*(4*t)
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:22:34) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2*t)*(3*t)*(4*t)
			t = t + 1
		else:
			pi = pi - 4/(2*t)*(3*t)*(4*t)
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:22:38) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2*t)*(3*t)*(4*t)
			t = t + 1
		else:
			pi = pi - 4/(2*t)*(3*t)*(4*t)
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:24:20) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2+t)*(3+t)*(4+t)
			t = t + 1
		else:
			pi = pi - 4/(2+t)*(3+t)*(4+t)
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-4.06666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:26:50) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			pi = pi - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:26:56) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 != 0):
			pi = pi + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			pi = pi - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(pi,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:27:19) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 3
if n == 1:
	pi = 3
else:
	while (t<n):
		if (t%2 == 0):
			pi = pi + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			pi = pi - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(pi,8))
-- OUTPUT:
16.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:28:09) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 == 0):
			x = x + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			x = x - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(pi,8))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:29:06) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 == 0):
			x = x + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			x = x - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(x,8))
-- OUTPUT:
16.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:29:13) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 == 0):
			x = x + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			x = x - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(x,8))
-- OUTPUT:
16.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:31:28) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 != 0):
			x = x + 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
		else:
			x = x - 4/(2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1))
			t = t + 1
print(round(x,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:31:59) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
			x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
print(round(x,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:32:13) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
			x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
print(round(x,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 22:32:16) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
			x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
print(round(x,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 22:32:20) 
-- CODE:
n = int(input("serie: "))
t = 1
x = 3
if n == 1:
	x = 3
else:
	while (t<n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
			x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
print(round(x,8))
-- EXECUTION TIME:
0.214939
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
